# doc-extract

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  browser.js  demo.html  doc-extract.d.ts  doc-extract.js  index.d.ts  index.js  package.json
.github/workflows/: ci.yml  release.yml
__tests__/: concurrency.test.ts  extract.test.ts  helpers.ts  large-file.test.ts  pdf.test.ts  pkpass.test.ts  policy-setters.test.ts  show-extract.test.ts  soft-fail.test.ts  unknown-policy.test.ts  url-fetch.test.ts  zip-limit.test.ts
examples/: bench-concurrent.mjs  extract-pkpass.mjs  extract.mjs
fixtures/: sample.csv  sample.fb2  sample.html  sample.ics  sample.json  sample.txt  sample.vcf  sample.xml
scripts/: demo-server.mjs  test-wasi.cjs
src/: concurrency.rs  detect.rs  error.rs  input.rs  lib.rs  limits.rs
src/detect/: text_heuristic.rs
src/formats/: docx.rs  epub.rs  fb2.rs  ical.rs  json.rs  mod.rs  odt.rs  pdf.rs  pptx.rs  rtf.rs  spreadsheet.rs  text.rs  vcf.rs  zip_util.rs
src/pkpass/: format_for_ai.rs  mod.rs
